fixed alignment issues

--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ html{
 
 .info-block{
 	width: auto;
-	height: auto;
+	height: 500px;
   background-color: rgb(193,154,108);
   padding: 30px;
   margin-top: 80px;
